generator client {
  provider               = "prisma-client-js" //prisma-dbml-generator to get new dbml
  generatedFileExtension = "ts"
  moduleFormat           = "esm"
  runtime                = "bun"
}

datasource db {
  provider = "mysql"
}

model film_genres {
  film_id  Int
  genre_id Int    @db.UnsignedSmallInt
  films    films  @relation(fields: [film_id], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "film_genres_ibfk_1")
  genres   genres @relation(fields: [genre_id], references: [id], onUpdate: Restrict, map: "film_genres_ibfk_2")

  @@id([film_id, genre_id])
  @@index([film_id], map: "film_id")
  @@index([genre_id], map: "genre_id")
}

model films {
  id           Int           @id @default(autoincrement())
  title        String        @db.VarChar(200)
  description  String?       @db.Text
  release_date DateTime?     @db.Date
  duration_min Int?          @db.UnsignedSmallInt
  poster_url   String?       @db.VarChar(500)
  actors       actors[]
  film_genres  film_genres[]
  showtimes    showtimes[]

  @@unique([title, release_date], map: "unique_title_release_date")
  @@index([release_date], map: "release_date")
  @@index([title], map: "title")
}

model genres {
  id          Int           @id @default(autoincrement()) @db.UnsignedSmallInt
  name        String        @unique(map: "name") @db.VarChar(60)
  film_genres film_genres[]
}


model orders {
  id         BigInt        @id @default(autoincrement())
  user_id    Int
  status     orders_status @default(pending)
  created_at DateTime      @default(now()) @db.Timestamp(0)
  expires_at DateTime?     @db.Timestamp(0)
  users      users         @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "orders_ibfk_1")
  tickets    tickets[]

  @@index([user_id, status, created_at], map: "user_id")
}

model halls {
  id                     Int                      @id @default(autoincrement()) @db.UnsignedSmallInt
  theatre_id             Int                      @default(0) @db.UnsignedSmallInt
  name                   String                   @unique(map: "name") @db.VarChar(50)
  capacity               Int                      @db.UnsignedSmallInt  
  theatres               theatres                 @relation(fields: [theatre_id], references: [id], onDelete: Cascade, map: "FK_halls_theatres")
  showtimes              showtimes[]
  seats                  seats[]

  @@index([theatre_id], map: "theatre_id")
}

/// Representation of a seat in the hall
model seats {
  id                     Int                      @id @default(autoincrement())
  hall_id                Int                      @db.UnsignedSmallInt
  is_available           Int                      @db.TinyInt
  price                  Int                      @default(10)
  type                   seats_type
  seatLocation           seatLocation[]
  tickets                tickets[]
  halls                  halls                     @relation(fields: [hall_id], references: [id], map: "FK_seats_halls")
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model seatLocation {
  id        Int    @id @default(autoincrement()) @db.UnsignedInt  
  seat_id   Int
  column    Int
  row_label String @default("") @db.VarChar(3)  
  seats     seats @relation(fields: [seat_id], references: [id], map: "FK_seatLocation_seats")

  @@index([seat_id], map: "FK_seatLocation_seats")
}

model showtimes {
  id          Int       @id @default(autoincrement())
  film_id     Int
  hall_id     Int       @db.UnsignedSmallInt
  starts_at   DateTime  @db.DateTime(0)
  ends_at     DateTime? @db.DateTime(0)
  is_canceled Boolean   @default(false)
  films       films     @relation(fields: [film_id], references: [id], onUpdate: Restrict, map: "showtimes_ibfk_1")
  halls       halls     @relation(fields: [hall_id], references: [id], onUpdate: Restrict, map: "showtimes_ibfk_2")
  tickets     tickets[]

  @@unique([hall_id, starts_at], map: "hall_id")
  @@index([film_id, starts_at], map: "film_id")
  @@index([starts_at], map: "starts_at")
}

model theatres {
  id    Int     @id @default(autoincrement()) @db.UnsignedSmallInt
  name  String  @unique(map: "name") @db.VarChar(128)
  halls halls[]

  @@index([name], map: "name_2")
}

model tickets {
  id          BigInt         @id @default(autoincrement())
  order_id    BigInt?
  showtime_id Int
  seat_id     Int
  status      tickets_status @default(reserved)
  unit_price  Decimal        @db.Decimal(10, 2)
  reserved_at DateTime       @default(now()) @db.Timestamp(0)
  paid_at     DateTime?      @db.Timestamp(0)
  ticket_code String?        @unique(map: "ticket_code") @db.VarChar(64)
  orders      orders?        @relation(fields: [order_id], references: [id], onUpdate: Restrict, map: "tickets_ibfk_1")
  showtimes   showtimes      @relation(fields: [showtime_id], references: [id], onUpdate: Restrict, map: "tickets_ibfk_2")
  seats       seats          @relation(fields: [seat_id], references: [id], onUpdate: Restrict, map: "tickets_ibfk_3")

  @@unique([showtime_id, seat_id], map: "showtime_id")
  @@index([order_id], map: "order_id")
  @@index([seat_id], map: "seat_id")
  @@index([showtime_id, status], map: "showtime_id_2")
}

model users {
  id         Int        @id @default(autoincrement())
  email      String     @unique(map: "email") @db.VarChar(128)
  updated_at DateTime?  @db.Timestamp(0)
  role       users_role @default(user)
  password   String     @db.VarChar(512)
  orders     orders[]
}

model actors {
  name      String  @unique(map: "name") @db.VarChar(512)
  film_id   Int     @default(0)
  id        Int     @id @default(autoincrement()) @db.UnsignedInt
  link      String? @db.Text
  image_url String  @db.Text
  films     films   @relation(fields: [film_id], references: [id], onDelete: Cascade, map: "FK1_actors_films")

  @@index([film_id], map: "FK1_actors_films")
}



enum orders_status {
  pending
  paid
  expired
}

enum tickets_status {
  reserved
  paid
  expired
}

enum seats_type {
  Standard
  Premium
  Double  
}

enum users_role {
  user
  admin
}
